Fix code overlap

--- a/_sass/native.scss
+++ b/_sass/native.scss
@@ -1,5 +1,5 @@
 // Native code color scheme
-.highlight pre { background-color: #363636 }
+.highlight pre { background-color: #363636; white-space: pre; overflow: auto;}
 .highlight .hll { background-color: #404040 }
 .highlight .c { color: #999999; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
